--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Matt McKenna
 
 # Short bio or description (displayed in the header)
-description: Applied Machine Learning and Data Science
+description: Applied Machine Learning
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -24,7 +24,7 @@ footer-links:
   flickr:
   github: matt-mckenna
   instagram:
-  linkedin:
+  linkedin: matt-mckenna-54759a20
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
