--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Matt McKenna
 description: Applied Machine Learning
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Neural_network.svg/1200px-Neural_network.svg.png
 
 #
 # Flags below are optional
