--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Matt McKenna
 
 # Short bio or description (displayed in the header)
-description: Applied Machine Learning
+description: Applied Machine Learning and Data Science
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Neural_network.svg/1200px-Neural_network.svg.png
