--- a/_config.yml
+++ b/_config.yml
@@ -87,3 +87,8 @@ exclude:
   - CNAME
 
 issues_repo: matt-mckenna/public_comments
+
+collections:
+  archive:
+    output: true
+    permalink: /:collection/:name/
