--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Neural_network
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: mattmckennaml@gmail.com
   facebook:
   flickr:
   github: matt-mckenna
